--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<packaging>war</packaging>
 
 	<properties>
-		<build.number>0.0.1</build.number>
+		<build.number>0.0.3</build.number>
 		<!-- Generic properties -->
 		<java.version>1.7</java.version>
 		<project>
@@ -247,6 +247,11 @@
 			<version>3.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.neo4j</groupId>
+			<artifactId>neo4j-cypher-compiler-2.1</artifactId>
+			<version>2.1.2</version>
+		</dependency>
 	</dependencies>
 
 	<scm>
