--- a/src/main/resources/stage/velocity-api.properties
+++ b/src/main/resources/stage/velocity-api.properties
@@ -28,7 +28,8 @@ lookup.sizegroup.shipping.dimension.url=http://stage-espupdates.asicentral.com/a
 lookup.rustime.url=http://stage-espupdates.asicentral.com/api/api/lookup/criteria?code=PRTM
 lookup.imprintcolor.url=http://stage-espupdates.asicentral.com/api/api/lookup/criteria?code=COLR
 lookup.imprintsize.url=http://stage-espupdates.asicentral.com/api/api/lookup/criteria?code=IMSZ
-
+lookup.product.selected.lines.url=http://stage-espupdates.asicentral.com/api/api/lookup/linenames?company_id=
+lookup.product.fob.points.url=http://stage-espupdates.asinetwork.local/api/api/lookup/fob_points?company_id=
 
 lookup.safety.warnings.url=http://stage-espupdates.asicentral.com/api/api/lookup/safetywarnings
 lookup.media.citations.url=http://stage-espupdates.asicentral.com/api/api/mediacitation?company_id=
