--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,8 +12,8 @@
 		<filter-name>springSecurityFilterChain</filter-name>
 		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
 	</filter>
-
-<!-- 	<filter>
+<!-- 
+	<filter>
 		<filter-name>cors</filter-name>
 		<filter-class>com.asi.core.product.config.ExternalApiCORSFilter</filter-class>
 	</filter>
@@ -21,8 +21,8 @@
 	<filter-mapping>
 		<filter-name>cors</filter-name>
 		<url-pattern>/*</url-pattern>
-	</filter-mapping> -->
-	
+	</filter-mapping>
+ -->	
 	<filter-mapping>
 		<filter-name>springSecurityFilterChain</filter-name>
 		<url-pattern>/*</url-pattern>
