--- a/src/main/resources/velocity-import.properties
+++ b/src/main/resources/velocity-import.properties
@@ -1,5 +1,9 @@
 lookup.orgin.url=${api.url}/api/api/lookup/origins
-ws.api.product.import=${api.url}/api/api/ProductImport/
+ws.api.product.import=${api.url}/api/api/Product
+
+## RADAR Login API URL to get the access token information
+ws.api.login=${api.url}/api/api/Login
+
 
 lookup.color.url=${api.url}/api/api/lookup/colors
 lookup.material.url=${api.url}/api/api/lookup/materials
