--- a/src/main/webapp/WEB-INF/log4j.properties
+++ b/src/main/webapp/WEB-INF/log4j.properties
@@ -1,13 +1,13 @@
 # Default log level
-log4j.rootCategory=DEBUG, console
+log4j.rootCategory=DEBUG, file, console
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern=%-5p %d [%t] %c: %m%n
 
 log4j.appender.file=org.apache.log4j.RollingFileAppender
-log4j.appender.file.File=D:/tmp/logs/muleproductexport.log
-log4j.appender.file.MaxFileSize=10MB
-log4j.appender.file.MaxBackupIndex=1
+log4j.appender.file.File=${catalina.base}/logs/external-api.log
+log4j.appender.file.MaxFileSize=50MB
+log4j.appender.file.MaxBackupIndex=5
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 ################################################
