--- a/src/main/resources/prod/velocity-api.properties
+++ b/src/main/resources/prod/velocity-api.properties
@@ -9,6 +9,7 @@ lookup.currencies.url=http://espupdates.asicentral.com/api/api/lookup/currency
 lookup.discount.rates.url=http://espupdates.asicentral.com/api/api/lookup/discount_rates
 lookup.price.units.url=http://espupdates.asicentral.com/api/api/lookup/price_units
 lookup.product.categories.url=http://espupdates.asicentral.com/api/api/lookup/product_categories
+lookup.product.typecodes.url=http://espupdates.asicentral.com/api/api/lookup/product_types
 lookup.product.shapes.url=http://espupdates.asicentral.com/api/api/lookup/shapes
 lookup.product.themes.url=http://espupdates.asicentral.com/api/api/lookup/themes
 lookup.product.keywords.url=http://espupdates.asicentral.com/api/api/lookup/product_categories
@@ -16,6 +17,7 @@ lookup.sizes.url=http://espupdates.asicentral.com/api/api/lookup/sizes
 lookup.sizes.criteria.url=http://espupdates.asicentral.com/api/api/lookup/criteria_attributes
 lookup.imprint.url=http://espupdates.asicentral.com/api/api/lookup/imprint_methods
 lookup.imprint.artwork.url=http://espupdates.asicentral.com/api/api/lookup/criteria?code=IMPR
+lookup.media.citation.url=http://espupdates.asicentral.com/api/api/mediacitation?company_id=
 
 lookup.options.imprint.url=http://espupdates.asicentral.com/api/api/lookup/criteria?code=IMPR
 lookup.options.product.url=http://espupdates.asicentral.com/api/api/lookup/criteria?code=PROD
@@ -27,18 +29,16 @@ lookup.sizegroup.shipping.dimension.url=http://espupdates.asicentral.com/api/api
 lookup.rustime.url=http://espupdates.asicentral.com/api/api/lookup/criteria?code=PRTM
 lookup.imprintcolor.url=http://espupdates.asicentral.com/api/api/lookup/criteria?code=COLR
 lookup.imprintsize.url=http://espupdates.asicentral.com/api/api/lookup/criteria?code=IMSZ
-
+lookup.product.selected.lines.url=http://espupdates.asicentral.com/api/api/lookup/linenames?company_id=
+lookup.product.fob.points.url=http://espupdates.asicentral.com/api/api/lookup/fob_points?company_id=
 
 lookup.safety.warnings.url=http://espupdates.asicentral.com/api/api/lookup/safetywarnings
-lookup.media.citations.url=http://espupdates.asicentral.com/api/api/mediacitation?company_id=
 lookup.pricing.subtypecode.url=http://espupdates.asicentral.com/api/api/lookup/upcharge_types
 lookup.pricing.usage.level.url=http://espupdates.asicentral.com/api/api/lookup/usage_levels
 lookup.product.trade.names.url=http://espupdates.asicentral.com/api/api/lookup/trade_names?q=
 lookup.product.compliance.certs.url=http://espupdates.asicentral.com/api/api/lookup/compliance
 lookup.packaging.url=http://espupdates.asicentral.com/api/api/lookup/packaging
 lookup.pricing.less.than.min.url=http://espupdates.asicentral.com/api/api/lookup/criteria?code=LMIN
-
-
 
 
 lookup.batch.processing=http://espupdates.asicentral.com/api/api/batch
